# AT

./: .env.example  .gitattributes  .gitignore  BLOG.md  Dockerfile  LICENSE  README.md  app.py  config.py  generate_plots.py  openenv.yaml  pitch.md  product_evaluator.py  push_to_hf.py  pyproject.toml  question_generator.py  requirements.txt  run_tests.py  self_improve.py  server.py  session_manager.py  shared.py  student_model.py  train.py
.github/workflows/: cd.yml  ci.yml
adaptive_tutor_ai/: README.md  app.py  client.py  expert_simulator.py  pitch.md  product_evaluator.py  pyproject.toml  requirements.txt  reward.py  server.py  train.py  training.ipynb
adaptive_tutor_ai/subjects/: science.json
core/: product_evaluator.py  question_generator.py  self_improvement_tracker.py  session_manager.py
docs/: pitch.md
logs/: train_log.txt
scratch/: debug_api.py  fix_notebook.py
scripts/: cleanup_hf.py  push_to_hf.py
subjects/: history.json  math.json
tests/: conftest.py  test_environment.py  test_question_generator.py  test_reward.py  test_server_endpoints.py  test_session_manager.py
training/: self_improve.py  train.py  training.ipynb
