[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-tutor-ai"
version = "0.1.0"
description = "RL environment where AI tutor learns to teach better"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "gradio>=4.44.1",
    "requests>=2.31.0",
    "transformers>=4.40.0",
    "trl>=0.8.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
training = [
    "unsloth>=2024.0.0",
    "bitsandbytes>=0.41.0",
    "peft>=0.10.0",
]

[project.scripts]
server = "server:app"

[tool.setuptools]
include-package-data = true
packages = ["adaptive_tutor_ai"]
